# jarvis-mark1-revised

./: .gitignore  COMMANDS.md  Dockerfile  FINAL_SUMMARY.md  PHASE3_SESSION14_COMPLETION_REPORT.md  PHASE3_SESSION16_COMPLETION_REPORT.md  PHASE3_SESSION17_COMPLETION_REPORT.md  PHASE3_SESSION19_COMPLETION_REPORT.md  README.md  README_PRODUCTION.md  SYSTEM_STATUS_REPORT.md  UNIVERSAL_INTEGRATION_SUMMARY.md  check_agents.py  complete_ai_flow_demo.py  create_example_plugins.py  database_simplified.py  demo_universal_integration.py  direct_register_agent.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  docs-new.md  encryption_key.json  final_system_demo.py  funztionz.db  install_example_plugins.py  mark1.py  mark1_admin.py  mark1_launcher.py  prd-updated.md  production.env  project.md  pyproject.toml  real_ai_demo.py  real_jarvis_demo.py  register_weather_agent.py  requirements.txt  script.py  simple_server.py  (+20 more)
agents/adapters/autogpt_adapter/: adapter.py
agents/adapters/continue_adapter/: adapter.py
agents/adapters/devika_adapter/: adapter.py
agents/core/: base_agent.py
agents/custom/: example_agent.py
agents/registry/: plugin_loader.py  registry_store.py
cli/: view_memory.py
core/: agent_messenger.py
data/: mark1.db  mark1.db-shm  mark1.db-wal  mark1_db.sqlite  mark1_demo.sqlite  simplified_demo.sqlite  unified_workflow_demo.sqlite
data/contexts/: task_1749389300.json  task_1749389301.json  task_1749389365.json  task_1749389367.json  task_1749488109.json
data/results/: task_1749389300.json  task_1749389301.json  task_1749389365.json  task_1749389367.json  task_1749488109.json
docs/: docs.md  monitoring.md
generated_output/: autogpt_agent_adapter.py  babyagi_agent_adapter.py  business_plan_20250608_173838.md  execution_report_20250608_173838.json  langchain_agent_adapter.py  main_adapter.py  setup_adapter.py
llm/: ollama_engine.py
memory/: agent_memory.py  base.py  memory_router.py  vector_store.py
memory/utils/: summary.py
orchestrator/: orchestrator.py
reports/: API_SUCCESS_SUMMARY.md  API_TESTING_GUIDE.md  PHASE3_SESSION15_COMPLETION_REPORT.md  PHASE3_SESSION18_COMPLETION_REPORT.md  PHASE3_SESSION21_COMPLETION_REPORT.md  PHASE3_SESSION22_COMPLETION_REPORT.md  PHASE3_SESSION23_COMPLETION_REPORT.md  PHASE3_SESSION24_FINAL_COMPLETION_REPORT.md
scripts/: debug_ast_analysis.py  migrate_db.py  rotate_logs.py  start.sh
src/mark1/: main.py
src/mark1/agents/: discovery.py  pool.py  registry.py  universal_integrator.py
src/mark1/agents/integrations/: __init__.py  advanced_langchain.py  autogpt_integration.py  autogpt_integration.py-e  base_integration.py  crewai_integration.py-e  custom_integration.py  langchain_integration.py
src/mark1/api/: __init__.py  auth.py  cli.py  middleware.py  rest_api.py  websocket_api.py
src/mark1/api/schemas/: __init__.py  (+6 more)
src/mark1/cli/: __init__.py  __main__.py  agent_manager.py  commands.py  database_commands.py  db_commands.py  main.py  orchestrate_commands.py  plugin_commands.py  simple_cli.py  standalone_agent_cli.py  utils.py
src/mark1/config/: logging_config.py  settings.py
src/mark1/core/: __init__.py  agent_selector.py  context_manager.py  intelligent_orchestrator.py  logging.py  orchestrator.py  task_planner.py  workflow_engine.py
src/mark1/llm/: model_manager.py  ollama_client.py
src/mark1/models/: workflows.py
src/mark1/orchestration/: __init__.py  coordinator.py  model_manager.py
src/mark1/plugins/: __init__.py  base_plugin.py  plugin_adapter.py  plugin_manager.py  repository_analyzer.py
src/mark1/scanning/: ast_analyzer.py  codebase_scanner.py  llm_call_detector.py
src/mark1/storage/: database.py
src/mark1/utils/: constants.py  exceptions.py  project_template.py
tasks/: task.py
test_agents/advanced_langchain/: complex_langgraph_workflow.py  multi_agent_system.py  requirements.txt
test_agents/autogpt/: autonomous_research_agent.py  requirements.txt  simple_autogpt_agent.py
test_agents/crewai/: marketing_crew.py  requirements.txt  research_crew.py
test_agents/custom/: cli_tool_agent.py  script_agent.sh  simple_python_agent.py
test_agents/sample_langchain/: langchain_agent.py  langgraph_workflow.py  requirements.txt
tests/: test_api_examples.py  test_phase2_real_agent.py  test_phase3_langchain_integration.py  test_phase3_session14_advanced_langchain.py  test_phase3_session15_autogpt_integration.py  test_phase3_session19_context_manager.py  test_phase3_session21_websocket_api.py  test_phase3_session22_cli_interface.py  test_phase3_session23_advanced_orchestration.py  test_phase3_session24_final_integration.py  test_plugin_system.py
(+9 files in other folders)
